--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,6 @@
 {
   "extends": ["./node_modules/standard/eslintrc.json","next/core-web-vitals"],
-  "semi": "off"
+  "rules": {
+    "semi": ["error", "always"]
+  }
 }
