--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,5 @@
   "extends": ["./node_modules/standard/eslintrc.json","next/core-web-vitals"],
   "rules": {
     "semi": ["error", "never"]
-  }
+  }//no corrigue que sean obligatorios los punto y coma
 }
