--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["./node_modules/standard/eslintrc.json","next/core-web-vitals"],
   "rules": {
-    "semi": ["error", "never"]
-  }//no corrigue que sean obligatorios los punto y coma
+    "semi": ["error", "never"],
+    "object-curly-spacing": ["error", "never"]
+  }//no corrigue que sean obligatorios los punto y coma ni los espacios antes y despues de las llaves
 }
