--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -15,8 +14,6 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
