--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_PORT = https://xv-invitation-backend.onrender.com
-NEXT_PUBLIC_PORT = http://127.0.0.1:8000
+NEXT_PUBLIC_PORT = https://xv-invitation-backend.onrender.com
+# NEXT_PUBLIC_PORT = http://127.0.0.1:8000
