--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.0",
+    "@react-pdf/renderer": "^3.1.9",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
@@ -25,8 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "sweetalert2": "^11.7.3",
-    "xlsx": "^0.18.5"
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "standard": "^17.0.0"
