--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "sweetalert2": "^11.7.3"
+    "react-pdf-table-fork": "^0.4.3",
+    "sweetalert2": "^11.7.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "standard": "^17.0.0"
